Fix alignment

--- a/style.css
+++ b/style.css
@@ -126,7 +126,8 @@ footer {
 	background-color: #f3f3f3;
 }
 #footer-content {
-	padding: 1.2rem;
+	padding-top: 1.2rem;
+	padding-bottom: 1.2rem;
 }
 
 /* Hero */
